# GuardianAI-Platform

./: .gitignore  README.md  advisor.py  guardian_api.py  guardian_rules.yaml  init_db.sql  pyproject.toml  scanner.py  security_audit.py  system_architecture_summary.md
.github/workflows/: guardian_security_audit.yml
guardian-core/AI-Security-Project/: README.md  app.py  live_monitor.py  soc_engine.py
guardian-sdk-node/: package-lock.json  package.json  quick_test.js
guardian-sdk-node/lib/templates/: pre-commit
guardian-sdk-node/src/: config.js  detectors.js  index.js  monitor.js  telemetry.js
guardian-sdk-node/tests/: config.test.js  detectors.test.js
guardian_sdk/: __init__.py  cli.py  config.py  detectors.py  monitor.py  telemetry.py
test-apps/node-vulnerable-app/: app.js  package-lock.json  package.json  test_req.js
test-apps/python-vulnerable-app/: app.py
tests/: test_advisor.py  test_guardian_api.py  test_guardian_sdk.py
